src/sccs/styles.scss
//Prova utilizzo bulma framework CSS
@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";

html{
    background: linear-gradient(#484444, #9fada1); //css function
    height: 100%;
}

body{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

@media only screen and (min-width: 1024px) {
  body.modal-open{
    overflow: hidden;
  }
}

.container {
    display: block;

    &.card {
        max-width: 1000px !important;
    }
}


p{
    color:white;
    word-wrap: break-word;
    text-overflow: ellipsis;
}

.lds-dual-ring {
    display: flex;
    align-items: center;
    width: 250px;
    height: 200px;
  }
  .lds-dual-ring:after {
    content: " ";
    display: block;
    width: 150px;
    height: 150px;
    margin-top: 10px;
    border-radius: 50%;
    border: 6px solid #fff;
    border-color: #fff transparent #fff transparent;
    animation: lds-dual-ring 1.2s linear infinite;
  }
  @keyframes lds-dual-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

  .modal-card {
    width: 80%;
    background-color: white;
  }

  .modal-card-body{
    max-height: 80%;
    overflow-y:auto;
  }

  .my-buttonShow{
    display: block;
  }

